Fix for toaster issue with it's parent's height which is blocking the view of other elements behind it.

--- a/src/main/webapp/scripts/modules/layouts/device/styles/less/mobile.less
+++ b/src/main/webapp/scripts/modules/layouts/device/styles/less/mobile.less
@@ -317,8 +317,7 @@
 
 /*Toaster styles*/
     #toast-container {
-      bottom: 0;
-      left: 0px;
+      left: 0;
       width: 100%;
       &.toast-center-center {
         margin-left: 0;
